2008-07-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger/WatchPad.cs: Make sure the value tree is
	  properly initialized the first time it is shown.

2008-07-21  Michael Hutchinson <mhutchinson@novell.com> 

	* Makefile.am, MonoDevelop.Debugger.mdp: Fix automake build paths. Add
	  System.Xml reference and don't local copy refs, for build within
	  MD.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Remove ellupsizing.
	  Doesn't work well with the debug tooltip.

2008-07-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger/ObjectValueTreeView.cs,
	  MonoDevelop.Debugger/WatchPad.cs: Store watch pad expressions into
	  the user preferences when closing a solution.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Make columns resizable.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Show icons for Type and
	  Namespace values.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger.mdp, Makefile.am,
	  MonoDevelop.Debugger/WatchPad.cs,
	  MonoDevelop.Debugger/ObjectValueTreeView.cs: Added support for code
	  completion.

2008-07-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger/WatchPad.cs: Don't update the tree if there is
	  no current frame, since it will reset the current expansion state.
	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Added events which are
	  fired when value editing starts/ends. Fixes some text escaping
	  issues.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger/WatchPad.cs,
	  MonoDevelop.Debugger/ObjectValueTreeView.cs: Show member icons in
	  the watch pad. Support a new compact mode to be used in the debug
	  tooltips.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Debugger/DebugTextMarker.cs,
	  MonoDevelop.Debugger/DisasemblyView.cs: debug markers are now using